--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "underscore": "^1.13.6"
   }
 }
